styles/terminal_theme.css
html, body, #monitor, #screen, #crt {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
    min-height: fit-content;
}


.static__mask{
	position:absolute;
	height: 100%;
	width: 100%;
	background: #131313;
	opacity: 0.3;
}


#monitor {
	box-shadow: 0.6px 90px 110px -60px #1071e8;
    /* screen glow */
}

#monitor #crt:before {
	content: " ";
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	background: linear-gradient(
		to bottom,
		rgba(18, 16, 16, 0.1) 50%,
		rgba(0, 0, 0, 0.25) 50%
	);
	background-size: 100% 8px;
	z-index: 2;
	pointer-events: none;
	/* height: 100%; */
}
#crt,
pre {
	font-family: "VT323", monospace;
}
#crt {
	display: flex;
	flex-direction: column;
	justify-content: space-around;
	align-items: center;
	/* font-size: max(
		1rem,
		2.2vmin
	); Scale the font-size relative to the minimum screen dimension */
	position: relative;
	background:  #1071e8;
	background-image: radial-gradient(
		ellipse,
		 #1071e8 0%,
		black 90%
	);
	overflow-y: hidden;
}

#crt:after {
	content: " ";
	opacity: 0;
	background: #fff;
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	width: 100%;
	height: 100%;
	pointer-events: none;
	z-index: 3;
}

/* Scanline moving top to bottom over the screen */
.scanline {
	width: 100%;
	height: 100px;
	z-index: 8;
	background: linear-gradient(
		0deg,
		rgba(0, 0, 0, 0) 0%,
		rgba(255, 255, 255, 0.2) 10%,
		rgba(0, 0, 0, 0.1) 100%
	);
	opacity: 0.1;
	position: absolute;
	bottom: 100%;
	pointer-events: none;
	animation: scanline 10s linear infinite;
}

@keyframes scanline {
	0% {
		bottom: 100%;
	}
	80% {
		bottom: 100%;
	}
	100% {
		bottom: -20%;
	}
}


.flicker__effect{
	z-index: 2;
	position: absolute;
	top: 0%;
	left: 0%;
	height: 20%;
	width: 100%;
	background-image: url('../images/project_images/terminalstatic.png');
	opacity: 0.85;

	animation: shift 0.2s linear infinite;
	animation-play-state: running;
}

@keyframes shift{
	0%{
		top: 0%;
	}
	30%{
		top: 80%;
	}

	50%{
		top: 10%;
	}

	70%{
		top: 50%;
	}

	75%{
		top: 45%;
	}

	100%{
		top: 80%;
	}
}

.flash__filter{
	z-index: -1;
	position: absolute;
	top: 0%;
	left: 0%;
	width: 100%;
	height: 100%;
	background: radial-gradient(circle, #038cfc, transparent);
	animation: flash 0.8s linear infinite;
	animation-play-state: running;
}

@keyframes flash{
	0%{
		opacity: 0;
	}
	100%{
		opacity: 1;
	}
}

